--- a/templates/home.html
+++ b/templates/home.html
@@ -5,15 +5,16 @@
 
 <div id="header-row">
   <div id="header-row-half">
-    <img id="write-header" src="{% static "media/write-header.jpg" %}" alt="write image">
+    <img id="leaves-header" src="{% static "media/leaves-header.jpg" %}" alt="leaves image">
+    <img id="logo-header" src="{% static "media/logo.jpg" %}" alt="logo image">
   </div>
-  <img id="logo-header" src="{% static "media/logo.jpg" %}" alt="logo image">
 </div>
 
 <h1 id="title-top-page">Welkom!</h1>
 
 <div id="about-top-page">
   <h3>Over mij</h3>
+  <hr id="about-line">
   <p>Ik ben een freelance schrijver. Als journalist heb ik mij tot op heden
   gespecialiseerd in duurzaamheid en innovatie. Naast die twee onderwerpen
   ligt mijn passie op het gebied van mode en lifestyle.</p>
