--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,12 @@
 
 <div id="header-row">
   <div id="header-row-half">
-    <img id="leaves-header" src="{% static "media/leaves-header.jpg" %}" alt="leaves image">
-    <img id="logo-header" src="{% static "media/logo.jpg" %}" alt="logo image">
+    <img id="write-header" src="{% static "media/esther-sample.jpg" %}" alt="write image">
+    <img id="logo-header" src="{% static "media/ED-1-logo.png" %}" alt="logo image">
   </div>
 </div>
 
-<h1 id="title-top-page">Welkom!</h1>
+<h1 id="title-top-page" class="typewriter">Welkom!</h1>
 
 <div id="about-top-page">
   <h3>Over mij</h3>
