--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,17 @@
 
 <div id="header-row">
   <div id="header-row-half">
-    <img id="write-header" src="{% static "media/esther-sample.jpg" %}" alt="write image">
+    <div id="header-btn">
+      <h1 class="header-title-btn">OVER MIJ</h1>
+      <h1 class="header-title-btn">ARTIKELEN</h1>
+      <h1 class="header-title-btn">CONTACT</h1>
+    </div>
+    <img id="es-header" src="{% static "media/esther-sample.jpg" %}" alt="es image">
+  </div>
+  <div id="header-block-logo">
     <img id="logo-header" src="{% static "media/ED-1-logo.png" %}" alt="logo image">
   </div>
 </div>
-
-<h1 id="title-top-page" class="typewriter">Welkom!</h1>
 
 <div id="about-top-page">
   <h3>Over mij</h3>
@@ -24,7 +29,7 @@
   <img id="laptop-body" src="{% static "media/laptop-body.jpg" %}" alt="laptop image">
 </div>
 
-  <h3>Mijn portfolio</h3>
+  <h3>Artikelen</h3>
   <p>Bekijk een paar van mijn recente artikelen. Aarzel niet om mij een mailtje
   te sturen voor meer voorbeelden.</p>
 
