--- a/static/css/list-body.css
+++ b/static/css/list-body.css
@@ -1,11 +1,12 @@
 #list-subjects{
-  margin-left: 15%;
+  margin-left: 12vw;
   font-size: 15px;
-  margin-bottom: -5%;
+  margin-bottom: -5vw;
 }
 
 .line-subjects{
-  margin-left: -400px;
-  width: 50%;
+  margin-left: -20vw;
+  width: 40vw;
+  border: 1px solid #3C3C3A;
 }
 
