added vew to freelance page

--- a/static/css/freelance-body.css
+++ b/static/css/freelance-body.css
@@ -1,26 +1,27 @@
 .freelance-outer{
-  width: 100%;
+  width: 100vw;
 }
 
 #freelance-body{
   background-color: #e3e4e5;
-  margin-bottom: 130px;
-  margin-top: 150px;
-  padding: 20px;
-  width: 900px;
+  margin-bottom: 9vw;
+  margin-top: 10vw;
+  padding: 2vw;
+  width: 65vw;
 }
 
 #title-freelance{
-  margin-left: 83.5%;
+  margin-left: 51vw;
   white-space: nowrap;
 }
 
 #line-freelance{
   border: 2px solid #3C3C3A;
-  margin-right: -23%;
+  margin-right: -16vw;
+  margin-left: -2vw;
 }
 
 #text-freelance{
-  width: 80%;
-  margin-left: 5%;
+  width: 50vw;
+  margin-left: 2vw;
 }
