--- a/static/css/list-body.css
+++ b/static/css/list-body.css
@@ -1,7 +1,8 @@
 #list-subjects{
+  margin-top: 2vw;
   margin-left: 12vw;
-  font-size: 15px;
   margin-bottom: -5vw;
+  font-size: 15px;
 }
 
 .line-subjects{
