--- a/content2/templates/home.html
+++ b/content2/templates/home.html
@@ -10,7 +10,6 @@
   <div id="header-row-half">
     <div id="header-btn">
       <button id="button-js" onclick="jump('me')"><h1 class="header-title-btn">OVER MIJ</h1></button>
-      <button id="button-js" onclick="jump('freelance')"><h1 class="header-title-btn">FREELANCE</h1></button>
       <button id="button-js" onclick="jump('articles')"><h1 class="header-title-btn">ARTIKELEN</h1></button>
       <button id="button-js" onclick="jump('contact')"><h1 class="header-title-btn">CONTACT</h1></button>
     </div>
@@ -20,5 +19,24 @@
     <img id="logo-header" src="{% static "media/ED-1-logo.png" %}" alt="logo image">
   </div>
 </div>
+
+<div id="me">
+  <div id="about-title-block">
+    <h1 id="about-title">OVER MIJ</h1>
+  </div>
+  <p id="about-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<img id="icon-image" src="{% static "media/icon-image.png" %}" alt="icon image">
+
+
+<div id="articles">
+  <div id="article-title-block">
+    <h1 id="article-title">ARTIKELEN</h1>
+  </div>
+  <p id="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in.</p>
+</div>
+
+
 
 {% endblock body %}
