added article images and contact

--- a/content2/static/css/style.css
+++ b/content2/static/css/style.css
@@ -1,3 +1,6 @@
 @import "header.css";
 @import "about-top.css";
 @import "article-middle.css";
+@import "contact-buttom.css";
+@import "footer.css";
+
