--- a/content2/templates/home.html
+++ b/content2/templates/home.html
@@ -37,6 +37,33 @@
   <p id="article-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in.</p>
 </div>
 
+<div id="article-individual-block">
+  <div id="article-dark-block">
+    <img id="article-1-image" src="{% static "media/article-2.jpg" %}" alt="">
+    <p id="article-1-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+    <img id="article-2-image" src="{% static "media/article-1.jpg" %}" alt="">
+    <p id="article-2-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+  </div>
+  <h1 id="title-article-1">VROUW <span id="article-white-title">MAGAZINE</h1></span>
+  <h1 id="title-article-2">CLOUD ENERGY OPTIMIZER</h1>
+</div>
 
+
+<div id="contact">
+  <div id="contact-title-block">
+    <h1 id="contact-title">CONTACT</h1>
+  </div>
+  <p id="contact-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor</p>
+</div>
+
+
+<div id="footer">
+  <div id="footer-title-block">
+    <h3 id="footer-title">Dutch content creation</h3>
+  </div>
+</div>
+
+<script src="static/js/jump.js">
+</script>
 
 {% endblock body %}
