--- a/content2/static/css/article-middle.css
+++ b/content2/static/css/article-middle.css
@@ -19,3 +19,60 @@
   margin-right: 10vw;
   margin-left: 2vw;
 }
+
+#article-individual-block{
+  margin-left: 4vw;
+  margin-bottom: 20vw;
+}
+
+#article-1-image{
+  margin-top: -6vw;
+  margin-left: -36vw;
+  height: 30vw;
+  width: 43vw;
+}
+
+#article-1-text{
+  margin-top: 25vw;
+  margin-left: -30vw;
+  width: 22vw;
+
+}
+
+#title-article-1{
+  transform: rotate(-90deg);
+  margin-top: -100vw;
+  margin-left: -90vw;
+}
+
+#article-white-title{
+  color: white;
+}
+
+#article-2-image{
+  margin-top: -22vw;
+  margin-left: 40vw;
+  height: 38vw;
+  width: 35vw;
+}
+
+#article-2-text{
+  color: white;
+  margin-top: 2vw;
+  margin-left: 18vw;
+  margin-right: 18vw;
+}
+
+#title-article-2{
+  margin-top: 100vw;
+  margin-left: 32vw;
+}
+
+#article-dark-block{
+  margin-top: 8vw;
+  margin-left: 36vw;
+  width: 60vw;
+  height: 40vw;
+  background-color: #3C3C3A;
+  display: flex;
+}
