--- a/content1/static/css/list-body.css
+++ b/content1/static/css/list-body.css
@@ -1,22 +1,15 @@
 #list-subjects{
-  margin-top: 2vw;
+  margin-top: 1vw;
   margin-left: 12vw;
-  margin-bottom: -5vw;
+  margin-bottom: -3vw;
   font-size: 15px;
 }
 
 .line-subjects{
-  margin-left: -20vw;
-  width: 40vw;
-  border: 1px solid #3C3C3A;
-}
-
-
-#list-nr{
-  color: black;
-  font-size: 40px;
-  font-style: bolder;
-  font-family: 'Noto Sans', sans-serif;
+  margin-top: 1vw;
+  margin-left: -15vw;
+  width: 30vw;
+  border-bottom: 5px solid #e3e4e5;
 }
 
 #button-js{
@@ -26,7 +19,14 @@
   font-family: 'Noto Sans', sans-serif;
 }
 
+#list-title{
+  margin-left: 10vw;
+}
+
 #list-title:hover{
-/*  background-color: #e3e4e5;*/
-  font-size: 50px;
+  font-size: 30pt;
+}
+
+.line-subjects:hover{
+  border-bottom: 5px solid #fcffa5;
 }
