--- a/content2/templates/home.html
+++ b/content2/templates/home.html
@@ -60,6 +60,7 @@
 <div id="footer">
   <div id="footer-title-block">
     <h3 id="footer-title">Dutch content creation</h3>
+    <button id="button-js-footer" onclick="jump('top')"><h1 class="footer-title-btn">TOP</h1></button>
   </div>
 </div>
 
